refactor: migrate from widgets/editors to blocks architecture
- Remove old widgets/ and editors/ directories
- Introduce new blocks/ structure with ui/ and settings/ subdirectories
- Update core components to use new block system
- Enhance TypeScript and Vite configuration

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -21,7 +21,21 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* Path aliases */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@blocks/*": ["src/blocks/*"],
+      "@blocks/ui/*": ["src/blocks/ui/*"],
+      "@blocks/settings/*": ["src/blocks/settings/*"],
+      "@schema/*": ["src/schema/*"],
+      "@utils/*": ["src/utils/*"],
+      "@context/*": ["src/context/*"],
+      "@types/*": ["src/types/*"]
+    }
   },
   "include": ["src"]
 }
