refactor: restructure block system architecture with shared abstractions
- Move from centralized schema files to individual block modules
- Replace BaseBlock.tsx with new BaseWidget.tsx component
- Create shared abstractions (Block.ts, Field.ts, Style.ts, etc.)
- Add individual libraryItem.ts files for each block type
- Remove deprecated schema files and centralized type definitions
- Update all block components (hero, section, text) to use new architecture
- Refactor Canvas, Sidebar, and widget rendering components
- Update TypeScript configuration and build setup

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -31,7 +31,7 @@
       "@blocks/*": ["src/blocks/*"],
       "@blocks/ui/*": ["src/blocks/ui/*"],
       "@blocks/settings/*": ["src/blocks/settings/*"],
-      "@schema/*": ["src/schema/*"],
+      "@blocks/shared/*": ["src/blocks/shared/*"],
       "@utils/*": ["src/utils/*"],
       "@context/*": ["src/context/*"],
       "@types/*": ["src/types/*"]
