Refactor: Organize Layout and Renderer Components
•  Removed Unused Components:
•  Removed old components from src/components no longer needed due to updated architecture.
•  Added Layout Components:
•  New layout components are added to src/layout for better separation:
◦  TopBar.tsx, LibraryPanel.tsx, SettingsPanel.tsx, LibraryMenu.tsx, Canvas.tsx, Controls.tsx
•  Updated Renderer:
•  Added BlockRenderer.tsx in src/renderer.
•  Modified App Structure:
•  Updated App.tsx to reflect new imports from layout directory.
•  Configuration Updates:
•  Updated paths in tsconfig.app.json and made minor modifications to vite.config.ts.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,6 +28,8 @@
     "paths": {
       "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
+      "@layout/*": ["src/layout/*"],
+      "@renderer/*": ["src/renderer/*"],
       "@blocks/*": ["src/blocks/*"],
       "@blocks/ui/*": ["src/blocks/ui/*"],
       "@blocks/settings/*": ["src/blocks/settings/*"],
