refactor: reorganize utility functions into domain-driven architecture
- Move block-related utilities from src/utils/ to src/domain/blocks/
- Consolidate array, id, and other utilities into organized modules
- Update imports in components and context files
- Remove old utility files (arrayUtils, blockUtils, createBlock, etc.)
- Add new domain-specific modules for better code organization

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -35,6 +35,7 @@
       "@blocks/settings/*": ["src/blocks/settings/*"],
       "@blocks/shared/*": ["src/blocks/shared/*"],
       "@utils/*": ["src/utils/*"],
+      "@domain/*": ["src/domain/*"],
       "@context/*": ["src/context/*"],
       "@types/*": ["src/types/*"]
     }
