feat: integrate mock movie API with carousel block for dynamic content
- Add mock movie API service with search and retrieval endpoints
- Create reusable ApiSearchDropdown component with debounced search
- Integrate movie selection into carousel block forms
- Add HTTP utility functions and debounced value hook
- Remove redundant ItemForm component and simplify carousel logic
- Update carousel schema and library item definitions

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -39,7 +39,8 @@
       "@context/*": ["src/context/*"],
       "@pageSchemas/*": ["src/pageSchemas/*"],
       "@hooks/*": ["src/hooks/*"],
-      "@types/*": ["src/types/*"]
+      "@types/*": ["src/types/*"],
+      "@services/*": ["src/services/*"]
     }
   },
   "include": ["src"]
