--- a/.github/workflows/deploy-minio.yml
+++ b/.github/workflows/deploy-minio.yml
@@ -1,6 +1,7 @@
 name: Deploy Flimix Studio to MinIO
 
 on:
+  pull_request:
   workflow_dispatch:
     inputs:
       environment:
@@ -51,4 +52,3 @@ jobs:
         mc mb flimix-studio/$AWS_STORAGE_BUCKET_NAME --ignore-existing --region $AWS_S3_REGION_NAME
         mc policy set public flimix-studio/$AWS_STORAGE_BUCKET_NAME
         mc cp --recursive --attr "Cache-Control=public,max-age=31536000,immutable" dist/ flimix-studio/$AWS_STORAGE_BUCKET_NAME/static/flimix-studio/
-# Updated Thu Sep  4 16:17:27 IST 2025
