--- a/.github/workflows/deploy-minio.yml
+++ b/.github/workflows/deploy-minio.yml
@@ -37,10 +37,6 @@ jobs:
 
     - name: Build Flimix Studio
       run: npm run build
-      
-    - name: Copy index.html to dist
-      run: cp index.html dist/
-
     - name: Install MinIO Client
       run: |
         if ! command -v mc &> /dev/null; then
@@ -52,4 +48,15 @@ jobs:
     - name: Deploy to MinIO
       run: |
         mc alias set flimix-studio $AWS_S3_ENDPOINT_URL $AWS_ACCESS_KEY_ID $AWS_SECRET_ACCESS_KEY --api s3v4
-        mc cp --recursive --attr "Cache-Control=public,max-age=31536000,immutable" dist/ flimix-studio/$AWS_STORAGE_BUCKET_NAME/static/studio/
+        
+        # Upload HTML files with proper MIME type
+        mc cp --attr "Cache-Control=public,max-age=0,no-cache" dist/*.html flimix-studio/$AWS_STORAGE_BUCKET_NAME/static/studio/
+        
+        # Upload CSS files with proper MIME type
+        mc cp --recursive --attr "Cache-Control=public,max-age=31536000,immutable" --exclude "*.html" --include "*.css" dist/ flimix-studio/$AWS_STORAGE_BUCKET_NAME/static/studio/
+        
+        # Upload JS files with proper MIME type
+        mc cp --recursive --attr "Cache-Control=public,max-age=31536000,immutable" --exclude "*.html" --exclude "*.css" --include "*.js" dist/ flimix-studio/$AWS_STORAGE_BUCKET_NAME/static/studio/
+        
+        # Upload other assets (images, etc.) with proper MIME type
+        mc cp --recursive --attr "Cache-Control=public,max-age=31536000,immutable" --exclude "*.html" --exclude "*.css" --exclude "*.js" dist/ flimix-studio/$AWS_STORAGE_BUCKET_NAME/static/studio/
