--- a/.github/workflows/deploy-minio.yml
+++ b/.github/workflows/deploy-minio.yml
@@ -37,6 +37,7 @@ jobs:
 
     - name: Build Flimix Studio
       run: npm run build
+
     - name: Install MinIO Client
       run: |
         if ! command -v mc &> /dev/null; then
@@ -49,14 +50,14 @@ jobs:
       run: |
         mc alias set flimix-studio $AWS_S3_ENDPOINT_URL $AWS_ACCESS_KEY_ID $AWS_SECRET_ACCESS_KEY --api s3v4
         
-        # Upload HTML files with proper MIME type
-        mc cp --attr "Cache-Control=public,max-age=0,no-cache" dist/*.html flimix-studio/$AWS_STORAGE_BUCKET_NAME/static/studio/
+        # Upload HTML files with no-cache headers
+        mc cp --attr "Cache-Control=no-cache,no-store,must-revalidate" dist/*.html flimix-studio/$AWS_STORAGE_BUCKET_NAME/static/studio/
         
-        # Upload CSS files with proper MIME type
-        mc cp --recursive --attr "Cache-Control=public,max-age=31536000,immutable" --exclude "*.html" --include "*.css" dist/ flimix-studio/$AWS_STORAGE_BUCKET_NAME/static/studio/
+        # Upload CSS files with proper MIME type and cache headers
+        mc cp --recursive --attr "Cache-Control=public,max-age=31536000,immutable" dist/assets/ flimix-studio/$AWS_STORAGE_BUCKET_NAME/static/studio/assets/
         
-        # Upload JS files with proper MIME type
-        mc cp --recursive --attr "Cache-Control=public,max-age=31536000,immutable" --exclude "*.html" --exclude "*.css" --include "*.js" dist/ flimix-studio/$AWS_STORAGE_BUCKET_NAME/static/studio/
+        # Upload JS files with proper MIME type and cache headers
+        mc cp --recursive --attr "Cache-Control=public,max-age=31536000,immutable" dist/js/ flimix-studio/$AWS_STORAGE_BUCKET_NAME/static/studio/js/
         
-        # Upload other assets (images, etc.) with proper MIME type
-        mc cp --recursive --attr "Cache-Control=public,max-age=31536000,immutable" --exclude "*.html" --exclude "*.css" --exclude "*.js" dist/ flimix-studio/$AWS_STORAGE_BUCKET_NAME/static/studio/
+        # Upload other assets (images, etc.)
+        mc cp --attr "Cache-Control=public,max-age=31536000,immutable" dist/*.svg flimix-studio/$AWS_STORAGE_BUCKET_NAME/static/studio/
