--- a/.github/workflows/deploy-minio.yml
+++ b/.github/workflows/deploy-minio.yml
@@ -1,7 +1,6 @@
 name: Deploy Flimix Studio to MinIO
 
 on:
-  pull_request:
   workflow_dispatch:
     inputs:
       environment:
@@ -57,7 +56,7 @@ jobs:
         mc cp --recursive --attr "Cache-Control=public,max-age=31536000,immutable" dist/assets/ flimix-studio/$AWS_STORAGE_BUCKET_NAME/static/studio/assets/
         
         # Upload JS files with proper MIME type and cache headers
-        mc cp --recursive --attr "Cache-Control=public,max-age=31536000,immutable" dist/js/ flimix-studio/$AWS_STORAGE_BUCKET_NAME/static/studio/js/
+        mc cp --recursive --attr "Cache-Control=public,max-age=31536000,immutable" dist/js/ u/$AWS_STORAGE_BUCKET_NAME/static/studio/js/
         
         # Upload other assets (images, etc.)
         mc cp --attr "Cache-Control=public,max-age=31536000,immutable" dist/*.svg flimix-studio/$AWS_STORAGE_BUCKET_NAME/static/studio/
