--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy:local": "./scripts/deploy-local.sh"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
