--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
 name: Deploy Build to S3
-run-name: Deploy Flimix Studio
 
 on:
   push:
+    branches: [ main ]
   workflow_dispatch:
     inputs:
       remote_directory:
