--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -35,6 +35,7 @@
       "@blocks/ui/*": ["src/blocks/ui/*"],
       "@blocks/settings/*": ["src/blocks/settings/*"],
       "@blocks/shared/*": ["src/blocks/shared/*"],
+      "@menu/*": ["src/menu/*"],
       "@utils/*": ["src/utils/*"],
       "@domain/*": ["src/domain/*"],
       "@context/*": ["src/context/*"],
