feat: add header and footer builder with live preview
- Add HeaderFooterEditor component with tabbed interface
- Implement live preview canvas with item selection
- Add default header and footer schemas
- Create reusable tabs component
- Add comprehensive form components for header/footer editing
- Configure path aliases for improved imports
- Update main entry point to render header/footer builder

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -39,6 +39,8 @@
       "@domain/*": ["src/domain/*"],
       "@context/*": ["src/context/*"],
       "@pageSchemas/*": ["src/pageSchemas/*"],
+      "@defaultSchemas/*": ["src/defaultSchemas/*"],
+      "@editor/*": ["src/editor/*"],
       "@hooks/*": ["src/hooks/*"],
       "@types/*": ["src/types/*"],
       "@services/*": ["src/services/*"]
