refactor: rename pageSchemas folder to fixtures
- Rename pageSchemas directory to fixtures for better semantic clarity
- Update import path in PageBuilder component to use @fixtures alias
- Update Vite path alias configuration for fixtures directory
- Update TypeScript path mapping in tsconfig.app.json
- Improve naming to reflect sample/test data purpose

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -38,7 +38,7 @@
       "@utils/*": ["src/utils/*"],
       "@domain/*": ["src/domain/*"],
       "@context/*": ["src/context/*"],
-      "@pageSchemas/*": ["src/pageSchemas/*"],
+      "@fixtures/*": ["src/fixtures/*"],
       "@hooks/*": ["src/hooks/*"],
       "@types/*": ["src/types/*"],
       "@services/*": ["src/services/*"]
