--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -38,8 +38,8 @@
       "@domain/*": ["src/domain/*"],
       "@context/*": ["src/context/*"],
       "@fixtures/*": ["src/fixtures/*"],
-      "@defaultSchemas/*": ["src/defaultSchemas/*"],
-      "@editor/*": ["src/editor/*"],
+      "@header/*": ["src/header/*"],
+      "@footer/*": ["src/footer/*"],
       "@hooks/*": ["src/hooks/*"],
       "@types/*": ["src/types/*"],
       "@services/*": ["src/services/*"]
