feat: add header and footer builder interface

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -38,6 +38,8 @@
       "@domain/*": ["src/domain/*"],
       "@context/*": ["src/context/*"],
       "@fixtures/*": ["src/fixtures/*"],
+      "@header/*": ["src/header/*"],
+      "@footer/*": ["src/footer/*"],
       "@hooks/*": ["src/hooks/*"],
       "@types/*": ["src/types/*"],
       "@services/*": ["src/services/*"]
