refactor: flatten services directory structure to src/api
Remove unnecessary services/ nesting by moving api/ directly under src/.
Update all import paths from @services/api to @api and configure path
aliases in vite.config.ts and tsconfig.app.json accordingly.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -40,7 +40,7 @@
       "@fixtures/*": ["src/fixtures/*"],
       "@hooks/*": ["src/hooks/*"],
       "@types/*": ["src/types/*"],
-      "@services/*": ["src/services/*"]
+      "@api/*": ["src/api/*"]
     }
   },
   "include": ["src"]
