refactor: centralize shared block types to src/types
- Move type definitions from src/blocks/shared/ to new src/types/ directory
- Rename type files to follow lowercase naming convention
- Update all component imports to utilize the new @type alias
- Remove obsolete type files from src/blocks/shared
- Add @type path alias configuration to tsconfig.app.json

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -39,7 +39,7 @@
       "@context/*": ["src/context/*"],
       "@fixtures/*": ["src/fixtures/*"],
       "@hooks/*": ["src/hooks/*"],
-      "@types/*": ["src/types/*"],
+      "@type/*": ["src/types/*"],
       "@api/*": ["src/api/*"]
     }
   },
