refactor: restructure domain logic and block rendering
- Consolidate domain logic: Move block factory, traversal, and update logic from  to  to separate pure business logic from context.
- Rename and relocate orchestrator: Move  from  to  and rename to  to clarify its role as a rendering component.
- Update import aliases: Add  alias in  mapped to .
- Update references: Refactor all imports in contexts, blocks, and preview components to reflect the new structure.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -34,6 +34,7 @@
       "@blocks/ui/*": ["src/blocks/ui/*"],
 
       "@utils/*": ["src/utils/*"],
+      "@domain": ["src/domain"],
       "@domain/*": ["src/domain/*"],
       "@context/*": ["src/context/*"],
       "@fixtures/*": ["src/fixtures/*"],
